-cleanups in properties that are not used anymore -added css funcref file, ripped from the Screem source ;-)
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1004 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -25,7 +25,7 @@ INSTALL_DIR = $(INSTALL) -d -m 755
 INSTALL_DATA = ${INSTALL} -m 644
 
 DEFAULTFILES = highlighting.default filetypes.default encodings.default custom_menu.default
-FUNCREFFILES = funcref_html.xml funcref_php.xml
+FUNCREFFILES = funcref_html.xml funcref_php.xml funcref_css.xml
 .SUFFIXES: .in .default
 
 .in.default:
