updated some of the default options
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1028 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -53,10 +53,10 @@ install: all
 
 uninstall:
 	@for file in $(DEFAULTFILES) ; do \
-		rm -r $(DESTDIR)$(pkgdatadir)/$$file ;\
+		rm -f $(DESTDIR)$(pkgdatadir)/$$file ;\
 	done
-	rm -r $(DESTDIR)$(gnome2menupath)/bluefish.desktop
-	rm -r $(DESTDIR)$(gnome1menupath)/Applications/bluefish.desktop
+	rm -f $(DESTDIR)$(gnome2menupath)/bluefish.desktop
+	rm -f $(DESTDIR)$(gnome1menupath)/Applications/bluefish.desktop
 
 clean:
 	rm -f *.default
