added edit_tag image, and made the 'general' images 'extern' instead of 'static' so they can be used in other files as well
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1031 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/inline_images/Makefile
+++ b/bluefish/inline_images/Makefile
@@ -166,11 +166,12 @@ TOOLBAR = \
 #	wml_var wml_var.png
 
 GENERAL = \
-	close_small close_small.png
+	close_small close_small.png \
+	edit_tag edit_tag.png
 
 all:
-	gdk-pixbuf-csource --raw --build-list $(TOOLBAR) > toolbar_icons.c
-	gdk-pixbuf-csource --raw --build-list $(GENERAL) > general_icons.c
+	gdk-pixbuf-csource --raw --static --build-list $(TOOLBAR) > toolbar_icons.c
+	gdk-pixbuf-csource --raw --extern --build-list $(GENERAL) > general_icons.c
 
 
 
