AC_MSG_ERROR cannot have a comma in the error
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1034 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -171,7 +171,7 @@ if pkg-config --exists gtk+-2.0 ; then
 	echo "yes"
 else
 	echo "no"
-	AC_MSG_ERROR(libgtk2.0-dev missing, please install libgtk2.0-dev)
+	AC_MSG_ERROR(libgtk2.0-dev missing please install libgtk2.0-dev)
 fi
 
 echo -n "checking for gtk+-2.2... "
