added proper filetype detection for html with a tag like <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US">
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1045 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/filetypes.in
+++ b/bluefish/data/filetypes.in
@@ -1,6 +1,6 @@
 text:.txt:::1::
 php:.php\:.php4\:.inc\:.php3: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_php.png:1:^#!/[a-z/]+php:
-html:.html\:.htm\:.shtml\:.shtm:<> \n":PKGDATADIRicon_html.png:1:<html>:
+html:.html\:.htm\:.shtml\:.shtm:<> \n":PKGDATADIRicon_html.png:1:<html[^>]*>:
 python:.py::PKGDATADIRicon_python.png:1:^#!/[a-z/]+python:
 c:.c\:.h:(){}'[]\n/#" :PKGDATADIRicon_c.png:1::
 java:.java:(){}'[]\n/" :PKGDATADIRicon_java.png:1::
