Add About dialog code with a few modifications from more <more@irpin.com>
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1057 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/src/Makefile.in
+++ b/bluefish/src/Makefile.in
@@ -41,7 +41,8 @@ INSTALL_PROGRAM = $(INSTALL) -s -m 755
 DEFS = -DLOCALEDIR=\"$(localedir)\" -DGNULOCALEDIR=\"$(gnulocaledir)\" \
 -DLOCALE_ALIAS_PATH=\"$(aliaspath)\" -DPKGDATADIR=\"$(pkgdatadir)\" @DEFS@
 
-SRCS = 	bf_lib.c \
+SRCS = 	about.c \
+			bf_lib.c \
 			bfspell.c \
 			bluefish.c \
 			bookmark.c \
@@ -100,6 +101,3 @@ install: all
 
 uninstall:
 	/bin/rm -f $(DESTDIR)$(bindir)/bluefish
-
-
-
