--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -42,6 +42,7 @@ DEFS = -DLOCALEDIR=\"$(localedir)\" -DGNULOCALEDIR=\"$(gnulocaledir)\" \
 -DLOCALE_ALIAS_PATH=\"$(aliaspath)\" -DPKGDATADIR=\"$(pkgdatadir)\" @DEFS@
 
 SRCS = 	about.c \
+			authen.c \
 			bf_lib.c \
 			bfspell.c \
 			bluefish.c \
