--- a/src/config.h.in
+++ b/src/config.h.in
@@ -94,3 +94,7 @@
 
 /* have atleast gnome-vfs-2.2 */
 #undef HAVE_ATLEAST_GNOMEVFS_2_2
+
+/* have atleast gnome-vfs-2.5 */
+#undef HAVE_ATLEAST_GNOMEVFS_2_5
+
