--- a/configure.ac
+++ b/configure.ac
@@ -28,6 +28,7 @@ AC_SUBST(VERSION)
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
 AC_DEFINE_UNQUOTED(CURRENT_VERSION_NAME, "$PACKAGE $VERSION HTML editor")
+AC_DEFINE_UNQUOTED(CONFIGURE_OPTIONS, "$0 $*")
 
 ALL_LINGUAS="cs da de el es fr hu it ja nl no pl pt_BR ro ru sv"
 
