--- a/src/config.h.in
+++ b/src/config.h.in
@@ -72,6 +72,8 @@
 /* the current package name and version */
 #undef CURRENT_VERSION_NAME
 
+#undef CONFIGURE_OPTIONS
+
 /* debugging output */
 #undef DEBUG
 
