added the ./configure options to the about dialog
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1085 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -28,6 +28,7 @@ AC_SUBST(VERSION)
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
 AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
 AC_DEFINE_UNQUOTED(CURRENT_VERSION_NAME, "$PACKAGE $VERSION HTML editor")
+AC_DEFINE_UNQUOTED(CONFIGURE_OPTIONS, "$0 $*")
 
 ALL_LINGUAS="cs da de el es fr hu it ja nl no pl pt_BR ro ru sv"
 
