--- a/bluefish/data/highlighting.in
+++ b/bluefish/data/highlighting.in
@@ -46,7 +46,7 @@ html:html-attrib-sub2:1:2::3:^html-attrib$:#009900::0:0:
 html:specialchar:1:&[^; ]*;::2::#999999::2:0:
 html:comment:0:<!--:-->:1::#AAAAAA::1:2:
 html:doctype:1:<![a-z0-9]+:[^?-]>:1::#bb8800::0:0:
-xml:tag:1:<((/)?[a-z0-9]+):[^?-]>:1::#0000EE::0:0:
+xml:tag:1:<((/)?[a-z0-9]+):[^?-]?>:1::#0000EE::0:0:
 xml:tag-name:1:1::3:^tag$:#000077::2:0:
 xml:tag-attrib:1:([a-z]*=)("[^"]*")::2:^tag$:::0:0:
 xml:tag-attrib-sub2:1:2::3:^tag-attrib$:#009900::0:0:
