modified path from "W. Michael Petullo" <mike@flyn.org>
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1183 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/bluefish.desktop.in
+++ b/bluefish/data/bluefish.desktop.in
@@ -1,10 +1,10 @@
 [Desktop Entry]
-Name=Bluefish
+Name=Bluefish editor
 Comment=Web development editor
-Exec=bluefish
+Exec=bluefish -n
 Icon=ICONDIR/bluefish-icon.png
 Terminal=false
 Type=Application
 Categories=Application;Development;
 Encoding=UTF-8
-
+StartupNotify=true
