--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -19,6 +19,8 @@ localedir = $(datadir)/locale
 iconpath=@ICONPATH@
 gnome1menupath=@GNOME1MENUPATH@
 gnome2menupath=@GNOME2MENUPATH@
+gnome2appregistry=@GNOME2APPREGISTRY@
+have_gnome_vfs=@HAVE_GNOME_VFS@
 
 INSTALL = @INSTALL@
 INSTALL_DIR = $(INSTALL) -d -m 755 
@@ -33,6 +35,11 @@ FUNCREFFILES = funcref_html.xml funcref_php.xml funcref_css.xml funcref_python.x
 
 all: $(DEFAULTFILES)
 	sed -e 's!ICONDIR!$(iconpath)!' < bluefish.desktop.in > bluefish.desktop
+	if [ ${have_gnome_vfs} = "1" ] ; then \
+		sed -e 's!EXPECT_URIS!true!' -e 's!SUPPORTED_URI_SCHEMES!file,http,ftp,sftp,smb!' < bluefish.applications.in > bluefish.applications ;\
+	else \
+		sed -e 's!EXPECT_URIS!false!' -e 's!SUPPORTED_URI_SCHEMES!!' < bluefish.applications.in > bluefish.applications ;\
+	fi
 
 install: all
 	$(INSTALL_DIR) $(DESTDIR)$(pkgdatadir)
@@ -50,6 +57,9 @@ install: all
 		$(INSTALL_DIR) $(DESTDIR)$(gnome1menupath)/Applications ;\
 		$(INSTALL_DATA) bluefish.desktop $(DESTDIR)$(gnome1menupath)/Applications ;\
 	fi
+	if [ -d $(gnome2appregistry) ] ; then \
+		$(INSTALL_DATA) bluefish.applications $(gnome2appregistry) ;\
+	fi
 
 uninstall:
 	@for file in $(DEFAULTFILES) ; do \
@@ -57,6 +67,7 @@ uninstall:
 	done
 	rm -f $(DESTDIR)$(gnome2menupath)/bluefish.desktop
 	rm -f $(DESTDIR)$(gnome1menupath)/Applications/bluefish.desktop
+	rm -r $(gnome2appregistry)/bluefish.applications
 
 clean:
 	rm -f *.default
