added 'make clean' for bluefish.applications
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1185 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/Makefile.in
+++ b/bluefish/data/Makefile.in
@@ -72,6 +72,7 @@ uninstall:
 clean:
 	rm -f *.default
 	rm -f bluefish.desktop
+	rm -f bluefish.applications
 
 distclean: clean
 	rm -f Makefile *.rej *.orig
