--- a/bluefish/data/bluefish.applications.in
+++ b/bluefish/data/bluefish.applications.in
@@ -1,8 +1,8 @@
 bluefish
-command=bluefish -n
-name=Bluefish
-can_open_multiple_files=true
-expects_uris=EXPECT_URIS
-supported_uri_schemes=SUPPORTED_URI_SCHEMES
-requires_terminal=false
-mime_types=text/*,text/html,text/plain,text/x-c,text/x-objc,text/x-c++,text/x-c-header,text/x-perl,text/x-python,/text/x-php,text/x-java,text/xml,text/sgml,application/x-php,application/x-asp,text/vnd.wap.wml,image/svg,text/x-javascript,text/javascript
+	command=bluefish -n
+	name=Bluefish
+	can_open_multiple_files=true
+	expects_uris=EXPECT_URIS
+	supported_uri_schemes=SUPPORTED_URI_SCHEMES
+	requires_terminal=false
+	mime_types=text/html,text/plain,text/x-c,text/x-objc,text/x-c++,text/x-c-header,text/x-perl,text/x-java,text/xml,text/sgml,application/x-php,application/x-asp,text/vnd.wap.wml,image/svg,text/x-javascript,text/javascript,text/x-python,text/x-php,application/x-cgi,text/css,text/mathml,text/x-dtd,text/x-sql,text/x-po,text/*
