--- a/data/highlighting.in
+++ b/data/highlighting.in
@@ -207,3 +207,9 @@ jsp:html-tag-special:1:^(/)?(img|a)$::2:^html-tag$:#BB0540::0:0:
 jsp:html-tag-table:1:^(/)?(table|td|tr|tbody)$::2:^html-tag$:#5005AA::0:0:
 jsp:html-tag:1:1::3:^html$:#550044::2:0:
 jsp:html:1:<((/)?[a-z0-9]+):>:1::#000077::0:0:
+octave:string-escape:1:\\\\[\\\\"'0abfnrtv]::2:^string$:#000099::0:0:
+octave:string:1:":":1:^(top|function)$:#009900::0:0:
+octave:braces:1:[][(){}]::2:^(top|function)$:::2:0:
+octave:comment:1:(#|%).*?$::2:^(top|function)$:#999999::0:2:
+octave:function:1:function:endfunction:1::#770000::0:0:
+octave:keywords:0:(if|else|for|endfor|endif|global|switch|while|do-until|break|continue|unwind_protect|try)::2:^(top|function)$:::2:0:
