added the new images from Dave, but the bluefish project is not yet installed
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1228 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/inline_images/Makefile
+++ b/bluefish/inline_images/Makefile
@@ -16,6 +16,7 @@ TOOLBAR = \
 	bluefish_icon1 bluefish_icon1.png \
 	body body.png \
 	bold bold.png \
+	bookmarks bookmarks.png \
 	brbreak brbreak.png \
 	breakall breakall.png \
 	center center.png \
