--- a/bluefish/data/bluefish.desktop.in
+++ b/bluefish/data/bluefish.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Bluefish editor
-Comment=Web development editor
+Name=Bluefish Editor
+Comment=Web Development Editor
 Exec=bluefish -n
 Icon=ICONDIR/bluefish-icon.png
 Terminal=false
