applied patches from Michele:
I've made a patch to data/Makefile.in so that the DESTDIR directory be
prepended to various paths for gnome2.

This way it installs correctly the various gnome2 related paths.


git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@1233 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/Makefile.in
+++ b/Makefile.in
@@ -76,7 +76,7 @@ install: src/bluefish
 	$(INSTALL_DATA) images/bluefish_splash.png $(DESTDIR)$(pkgdatadir)
 	@cd icons/ && $(MAKE) install
 	if [ -d $(iconpath) ]; then \
-		$(INSTALL_DATA) inline_images/bluefish_icon1.png $(iconpath)/bluefish-icon.png ;\
+		$(INSTALL_DATA) inline_images/bluefish_icon1.png $(DESTDIR)$(iconpath)/bluefish-icon.png ;\
 	fi
 	@cd src/ && $(MAKE) install
 	if [ "${USE_NLS}" = "yes" ]; then \
