Add a check for GTK+ 2.4, so GTK+ 2.4 specific features can be added Bump version from pre0.13 to pre0.14
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1237 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/configure.ac
+++ b/bluefish/configure.ac
@@ -22,7 +22,7 @@ AC_CONFIG_HEADER(src/config.h)
 
 
 PACKAGE=bluefish
-VERSION=pre0.13
+VERSION=pre0.14
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
@@ -178,6 +178,14 @@ fi
 echo -n "checking for gtk+-2.2... "
 if pkg-config gtk+-2.0 --atleast-version=2.2 ; then
 	AC_DEFINE(HAVE_ATLEAST_GTK_2_2)
+	echo "yes"
+else
+	echo "no"
+fi
+
+echo -n "checking for gtk+-2.4... "
+if pkg-config gtk+-2.0 --atleast-version=2.4 ; then
+	AC_DEFINE(HAVE_ATLEAST_GTK_2_4)
 	echo "yes"
 else
 	echo "no"
