--- a/bluefish/data/filetypes.in
+++ b/bluefish/data/filetypes.in
@@ -1,5 +1,5 @@
 text:.txt:::1::0:
-php:.php\:.php4\:.inc\:.php3: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_php.png:1:^#!/[a-z/]+php:2:
+php:.php\:.php4\:.inc\:.php3: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_php.png:1:^(#!/[a-z/]+php|<\\?php):2:
 html:.html\:.htm\:.shtml\:.shtm:<> \n":PKGDATADIRicon_html.png:1:<html[^>]*>:2:
 python:.py::PKGDATADIRicon_python.png:1:^#!/[a-z/]+/python:0:
 c:.c\:.h:(){}'[]\n/#" :PKGDATADIRicon_c.png:1::0:
@@ -11,11 +11,11 @@ webimage:.jpg\:.png\:.gif\:.jpeg::PKGDATADIRicon_image.png:1::0:
 image:.jpg\:.png\:.gif\:.jpeg\:.tif\:.tiff\:.xpm\:.xcf::PKGDATADIRicon_image.png:1::0:
 sql:.sql:(){}'[]\n" ::1::0:
 jsp:.jsp:(){}'[]\n/#" :PKGDATADIRicon_java.png:1:^#!/[a-z/]+jsp:0:
-xml:.xml:<> \n":PKGDATADIRicon_xml.png:1::1:
+xml:.xml:<> \n":PKGDATADIRicon_xml.png:1:<\\?xml:1:
 javascript:.js:(){}'[]\n/" ::1::0:
 cfml:.cfm: <>'"/?$\\t-{}[]{}\n;:PKGDATADIRicon_cfml.png:1::2:
 pascal:.pas: (){}'[]\n;":PKGDATADIRicon_pascal.png:1::0:
 R:.r\:.rd\:.R\:.Rd\:.RD: <>=+-*/'"{}[]()\t\n.,\:$&|#:PKGDATADIRicon_r.png:1::0:
 gettext po:.po:"\n::1::0:
-octave:.m:::1::0:
-shell:.sh:::1:^#!/[a-z]+/[a-z/]*/(ba)?sh$:0:
+octave:.m:::1:^#!/[a-z/]+/octave:0:
+shell:.sh:::1:^#!/[a-z/]+/(ba)?sh$:0:
