--- a/src/config.h.in
+++ b/src/config.h.in
@@ -94,6 +94,9 @@
 /* have atleast gtk-2.2 */
 #undef HAVE_ATLEAST_GTK_2_2
 
+/* have atleast gtk-2.4 */
+#undef HAVE_ATLEAST_GTK_2_4
+
 /* have atleast gnome-vfs-2.2 */
 #undef HAVE_ATLEAST_GNOMEVFS_2_2
 
