--- a/bluefish/data/highlighting.in
+++ b/bluefish/data/highlighting.in
@@ -38,7 +38,7 @@ php:php-var-specialchars:0:(\\[|\\]|->)::2:^php-var$:#0000CC::0:0:
 php:php-string-single:0:':':1:^php$:#009900::1:1:
 php:php-string-single-escape:0:\\\\.::2:^php-string-single$:#009900::1:1:
 php:php-comment-C:0:/\\*:\\*/:1:^php$:#7777AA::1:2:
-php:php-comment-1line:0:(//|#).*?$::2:^php$:#7777AA::1:2:
+php:php-comment-1line:0:(//|#):($|\\?>):1:^php$:#7777AA::1:2:
 html:html:1:<((/)?[a-z0-9]+).*?>::2::#0000EE::0:0:
 html:html-tag:1:1::3:^html$:#000077::2:0:
 html:html-attrib:1:([a-z]*=)[ \\n\\t]*("[^"]*")::2:^html$:::0:0:
