--- a/data/highlighting.in
+++ b/data/highlighting.in
@@ -9,7 +9,7 @@ cfml:comment:0:<!--:-->:1::#AAAAAA::1:2:
 cfml:specialchar:1:&[^;]*;::2::#999999::2:0:
 cfml:doctype:1:<![a-z0-9]+:[^?-]>:1::#bb8800::0:0:
 c:string:0:":":1::#009900::0:0:
-c:string-escape:0:\\\\(n|t|v|b|r|f|a|\\\\|\\?|'|"|\\d{1,3}\\D|x\\d+)::2:^string$:#990099::0:0:
+c:string-escape:0:\\\\(n|t|v|b|r|f|a|\\\\|\\?|'|"|\\d{1,3}|x\\d+)::2:^string$:#990099::0:0:
 c:preprocessor:0:#\\s*?(include|define|if|ifdef|else|endif):$:1::#990099::0:0:
 c:comment:0:/\\*:\\*/:1:^(top|preprocessor)$:#000099::1:2:
 c:keywords:0:\\b(return|goto|if|else|case|default|switch|break|continue|while|do|for|sizeof)\\b::2::#009999::2:0:
@@ -38,7 +38,7 @@ php:php-var-specialchars:0:(\\[|\\]|->)::2:^php-var$:#0000CC::0:0:
 php:php-string-single:0:':':1:^php$:#009900::1:1:
 php:php-string-single-escape:0:\\\\.::2:^php-string-single$:#009900::1:1:
 php:php-comment-C:0:/\\*:\\*/:1:^php$:#7777AA::1:2:
-php:php-comment-1line:0:(//|#):($|\\?>):1:^php$:#7777AA::1:2:
+php:php-comment-1line:0:(//|#).*?$::2:^php$:#7777AA::1:2:
 html:html:1:<((/)?[a-z0-9]+).*?>::2::#0000EE::0:0:
 html:html-tag:1:1::3:^html$:#000077::2:0:
 html:html-attrib:1:([a-z]*=)[ \\n\\t]*("[^"]*")::2:^html$:::0:0:
