fixed a bug in a mysql custom menu entry
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@1267 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/data/custom_menu.in
+++ b/bluefish/data/custom_menu.in
@@ -9,7 +9,7 @@ cmenu_insert: /php/odbc/odbc exec query:$%0 = odbc_exec(%1, %2);\n::3:result var
 cmenu_insert: /php/odbc/odbc connect:$odbc_id = odbc_connect('%0', '%1', '%2');\n::3:odbc data source name:username:password:
 cmenu_insert: /php/mysql/query:$%0 = mysql_query(%1, %2);\n::3:result variable name:mysql connection id name:query string (quoted) or variable (including $):
 cmenu_insert: /php/mysql/mysql fetch row:while ($%1 = mysql_fetch_row($%0)) {\n\techo $%1[0];\n:\n}\nmysql_free_result($%0);\n:2:mysql result variable name:row variable name:
-cmenu_insert: /php/mysql/mysql connect:$mysql_id = mysql_connect('%0', '%1', '%2');\nmysql_select_db($mysql_id, '%3');\n::4:mysql host:mysql username:mysql password:database name:
+cmenu_insert: /php/mysql/mysql connect:$mysql_id = mysql_connect('%0', '%1', '%2');\nmysql_select_db('%3', $mysql_id);\n::4:mysql host:mysql username:mysql password:database name:
 cmenu_insert: /php/ibase/query:$%0 = ibase_query(%2);\n:ibase_free_result($%0);\n:2:result variable name:query string (quoted) or variable (including $):
 cmenu_insert: /php/ibase/ibase fetch row:while ($%1 = ibase_fetch_row($%0)) {\n\techo $%1[0];\n:\n}\nibase_free_result($%0);\n:2:ibase result variable name:row variable name:
 cmenu_insert: /php/ibase/ibase connect:$ibase_id = ibase_connect('%0\:%1', '%2', '%3');\n::4:ibase host:ibase database path:ibase username:ibase password:
