--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,7 +1,7 @@
 /* Bluefish HTML Editor
  * config.h.in - autoconf template
  *
- * Copyright (C) 2002 Olivier Sessink
+ * Copyright (C) 2002-2004 Olivier Sessink
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -102,4 +102,7 @@
 
 /* have atleast gnome-vfs-2.5 */
 #undef HAVE_ATLEAST_GNOMEVFS_2_5
+
+/* have atleast libgnome-2.6 */
+#undef HAVE_ATLEAST_GNOMEUI_2_6
 
